--- a/_sass/_layout-nav.scss
+++ b/_sass/_layout-nav.scss
@@ -3,31 +3,6 @@
 */
 
 
-.navigation {
-    //box-shadow: 0 1px $ochre;
-    padding: 0 1em;
-    margin: 0;
-    z-index: 100;
-    position: fixed;
-    width: 100%;
-    background-color: $white;
-    height: $header-height;
-    @include media ($mobile) {
-        height: $header-height-mobile;
-    }
-
-    @include media ($tablet) {
-        height: $header-height-tablet;
-    }
-
-}
-
-// Nav menu
-.navigation-wrapper {
-    @include outer-container;
-    @include clearfix;
-    position: relative;
-}
 .logo { // first col
     display: block;
     text-align: center;
@@ -37,9 +12,8 @@
         @include span-columns(4);
     }
     @include media ($tablet) {
-
         padding-bottom: 10px;
-        @include span-columns(3);
+        @include span-columns(6);
     }
     // when there is no image
     font-family: $heading-font-family;
@@ -59,7 +33,31 @@
 .nav__logo {
     max-width: 220px;
 }
+.trust {
+    // last column
+    float: left;
+    @include media ($mobile) {
+        text-align: right;
+        float: right;
+        @include span-columns(4);
+       // @include shift(3);
+        @include omega();
+    }
+    @include media ($tablet) {
+        //@include shift(3);
+        @include span-columns(6);
+        @include omega();
+    }
+}
+.trustlogo {
+    max-height: 60px;
+    margin-top: 10px;
+    @include media ($mobile) {
+        max-height: inherit;
+    }
+}
 .mission {
+    /*
     font-style: italic;
     font-weight: 500;
     font-size: 16px;
@@ -76,26 +74,35 @@
         //text-align: left;
         padding-top: 4.5em;
         font-size: 20px;
-    }
+    }*/
 }
-.trust {
-    text-align: center;
+
+.navigation {
+    //box-shadow: 0 1px $ochre;
+    padding: 0 1em;
+    margin: 0;
+    z-index: 100;
+    position: fixed;
+    width: 100%;
+    background-color: $white;
+    height: $header-height;
     @include media ($mobile) {
-        @include span-columns(3);
-        @include omega();
+        height: $header-height-mobile;
     }
+
     @include media ($tablet) {
-        text-align: right;
-        @include span-columns(4);
-        @include omega();
+        height: $header-height-tablet;
+    }
+    a:active, a:focus, a:hover {
+        text-decoration: none;
     }
 }
-.trustlogo {
-    max-height: 60px;
-    margin-top: 10px;
-    @include media ($mobile) {
-        max-height: inherit;
-    }
+
+// Nav menu
+.navigation-wrapper {
+    @include outer-container;
+    @include clearfix;
+    position: relative;
 }
 
 /*
@@ -104,16 +111,18 @@
 // Mobile view
 .navigation-menu-button {
     display: block;
-    position: fixed;
-    top: 1.5em;
-    right: 0;
-    //float: right;
+    //position: fixed;
+    //top: 1.5em;
+    //left: 0;
+    float: right;
     margin: 0;
     font-size: 1.5em;
     padding-top: 0.5em;
-    padding-right: 0.5em;
+    //padding-right: 0.5em;
     @include media ($mobile) {
-        top: 3em;
+        top: auto;
+        @include span-columns(1);
+        //top: 3em;
     }
     @include media ($tablet) {
         display: none;
@@ -127,11 +136,18 @@ nav {
         line-height: 1.5em;
     }
 }
+.menu--title {
+    font-size: 0.9em;
+    font-weight: 400;
+    text-decoration: none;
+}
+
+
 ul.navigation-menu {
     clear: both;
     display: none;
     position: fixed;
-    top: 6em;
+    top: 10em;
     right: 0;
     margin: 0 auto;
     overflow: visible;
